k8s/murky-view/apiDep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lens-api-deployment
  labels:
    app: lens-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lens-api
  template:
    metadata:
      labels:
        app: lens-api
    spec:
      containers:
        - name: lens-api
          image: kvait/murky-manager-server-app:dev
          ports:
            - containerPort: 3001
