k8s/murky-view/appDep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: view-deployment
  labels:
    app: view
spec:
  replicas: 1
  selector:
    matchLabels:
      app: view
  template:
    metadata:
      labels:
        app: view
    spec:
      containers:
        - name: lens-api
          image: kvait/murky-view-app:1
          ports:
            - containerPort: 3000
