k8s/murky-view/apiService.yml
apiVersion: v1
kind: Service
metadata:
  name: lens-api-service
  labels:
    app: lens-api
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: lens-api
