k8s/murky-view/appService.yml
apiVersion: v1
kind: Service
metadata:
  name: view-service
  labels:
    app: view
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: view
