k8s/murky-view/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: view.cursetheweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: view-service
                port:
                  number: 80
